Changelog
=========

1.3.1 (unreleased)
------------------

- Works with dexterity AND without blobs.


1.3.0 (2011-11-29)
------------------

- Added Italian translation
  [giacomos]

- Make sure that the portlet is rendered if upload_portal_type is set to auto.
  [swampmonkey]

- Prevent diazo themes from theming the json response.
  [swampmonkey]

- If downloaded content type has been selected in portlet settings
  and content type can't been added in current folder,
  portlet is hidden.
  [thomasdesvenain]

- Works with dexterity.
  We can upload dexterity content types which have a file or image field.
  We can upload contents in dexterity containers.
  [thomasdesvenain]

- Updated Chinese translation.
  [jianaijun]

1.2.1 (2011-10-10)
------------------

- Don't speak about drag and drop feature if navigator is IE.
  (it doesn't works unless version is IE 9.)
  [thomasdesvenain]

- If chameleon is installed the i18n:attributes don't get translated if the
  tag doesn't already have the attribute(s).
  [swampmonkey]

- Update with more Norwegian translations.
  [tormod, hannosch]

1.2.0 (2011-09-22)
------------------

* Fixed error message when trying to upload a file which ever exist in folder.
  [thomasdesvenain]

* Added support for tests using plone.app.testing; control panel is now
  removed when package is uninstalled.
  [hvelarde]

* Catch errors if sessions are disabled.
  [swampmonkey]

* Use ``plone.app.portlets.ManagePortlets`` permission, allows site-admins
  to add/edit the portlet.
  [ggozad]

* A folder type can implement IQuickUploadNotCapable
  so that upload is not allowed on it.
  [thomasdesvenain]

* We can include minimal.zcml file only to manually set IUploadCapable types.
  [thomasdesvenain]

* Add more messages into po files + french translations.
  [thomasdesvenain]

* Use IQuickUploadCapable interface to test if portlet has to be displayed.
  Avoid some 404 errors.
  [thomasdesvenain]
