@@ -4,7 +4,11 @@ Changelog
 1.3.1 (unreleased)
 ------------------
 
+- Add error logs when failures happen.
+  [thomasdesvenain]
+
 - Works with dexterity AND without blobs.
+  [thomasdesvenain]
 
 
 1.3.0 (2011-11-29)
@@ -49,7 +53,7 @@ Changelog
 1.2.0 (2011-09-22)
 ------------------
 
-* Fixed error message when trying to upload a file which ever exist in folder.
+* Fixed error message when trying to upload a file which already exists in folder.
   [thomasdesvenain]
 
 * Added support for tests using plone.app.testing; control panel is now
